--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-table": "^8.20.6",
     "dayjs": "^1.11.13",
     "next": "15.1.6",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
