--- a/package.json
+++ b/package.json
@@ -21,6 +21,15 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.1"
+  },
+  "prettier": {
+    "plugins": ["prettier-plugin-tailwindcss"],
+    "singleQuote": true,
+    "trailingComma": "none",
+    "tabWidth": 3,
+    "arrowParens": "avoid"
   }
 }
