layout components; improve nav bar kinda; add project grid components

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "singleQuote": true,
     "trailingComma": "none",
     "tabWidth": 3,
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "bracketSameLine": true
   }
 }
