--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
