--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.27.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
