--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "lint": "next lint && tsc --noEmit"
    },
    "dependencies": {
+      "@radix-ui/react-collapsible": "^1.1.8",
       "@vercel/analytics": "^1.5.0",
       "@vercel/blob": "^0.27.1",
       "clsx": "^2.1.1",
