--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
    },
    "dependencies": {
       "@radix-ui/react-collapsible": "^1.1.8",
+      "@radix-ui/react-toolbar": "^1.1.7",
+      "@tanstack/react-table": "^8.21.3",
       "@vercel/analytics": "^1.5.0",
       "@vercel/blob": "^0.27.1",
       "clsx": "^2.1.1",
