--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "dayjs": "^1.11.13",
       "dotenv": "^16.4.7",
       "next": "15.1.6",
+      "next-themes": "^0.4.6",
       "nodemailer": "^6.10.0",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
