--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
    "dependencies": {
       "@radix-ui/react-collapsible": "^1.1.8",
       "@radix-ui/react-dialog": "^1.1.11",
+      "@radix-ui/react-navigation-menu": "^1.2.10",
       "@radix-ui/react-popover": "^1.1.11",
       "@radix-ui/react-toolbar": "^1.1.7",
       "@tanstack/react-table": "^8.21.3",
